# jsonl-to-sqlite-vcc

./: README.md  pyproject.toml
.claude/skills/readchat/: SKILL.md
.claude/skills/recall/: SKILL.md
.claude/skills/searchchat/: SKILL.md
bench/: benchmark.py
jsonl_to_sqlite/: __init__.py  cli.py
trace_vcc_sqlite/: __init__.py  adapter.py  cli.py  ingest.py  schema.sql
